--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ inference_test_output
 # *.png
 *.json
 *.diff
-*.jpg
+# *.jpg
 !/projects/DensePose/doc/images/*.jpg
 
 # compilation and distribution
